--- a/FrontEnd/assets/css/CSS.css
+++ b/FrontEnd/assets/css/CSS.css
@@ -13,7 +13,9 @@ img {
     max-height: inherit;
     vertical-align: middle;
 }
-
+label{
+    display: none!important;
+}
 h6{
     font-family: 'Josefin Sans', sans-serif;
 }
@@ -76,7 +78,7 @@ a:hover {
     padding: 15px 200px 15px ;
 }
 
- a.rootB{
+a.rootB{
     color: green;
 }
 
@@ -127,11 +129,11 @@ a:hover {
 .header-search-form button{
     position: absolute;
     height: 100%;
-    width: 44px;
+    /*width: 44px;*/
     right: 10px;
     padding-right: 6px;
-    padding-left: 6px;
-    border-radius: 50%;
+    padding-left: 12px;
+    border-radius: 25px;
     top: 0;
     font-size: 1em;
     font-weight: 700;
@@ -143,18 +145,18 @@ a:hover {
 }
 
 .aaa{
-   display: inline-block;
+    display: inline-block;
     float: none;
 }
 
 .cart{
-display: inline-block;
+    display: inline-block;
     float: none;
     width: 60px;
-    }
+}
 
 .cart p {
-   position: absolute;
+    position: absolute;
     bottom: 50px;
     height: 16px;
     min-width: 16px;
@@ -638,7 +640,7 @@ img.book{
     text-align: left;
     display:block;
     float: left;
-   box-shadow: 0 1px 5px rgba(0,0,0,0.12), 0 1px 10px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 5px rgba(0,0,0,0.12), 0 1px 10px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
@@ -731,7 +733,7 @@ Authors list page
 
 .auts a{
     color: white;
-     text-align: center;
+    text-align: center;
 
 }
 
@@ -739,7 +741,7 @@ Authors list page
 .autI{
 
     width: 250px;
-     height: 250px;
+    height: 250px;
     border-radius: 50%;
     object-fit: cover;
     opacity:0.95 ;
@@ -814,7 +816,7 @@ All events page
 
 
 /*-------------
- single event page
+single event page
 ----------------*/
 .evtop{
     background-color: gainsboro;
@@ -845,7 +847,7 @@ All events page
 }
 
 #book a{
-     color: green;
+    color: green;
 }
 
 
@@ -1009,7 +1011,7 @@ Home page index.html
 
 .bestSellerNumber{
     position: absolute;
-    
+
     height: 30px;
     width: 30px;
     right: 5px;
@@ -1165,13 +1167,13 @@ END Cart page
 ---------------------*/
 
 #logOutDiv{
-  position: relative;
-  left: 2em;
+    position: relative;
+    left: 2em;
 }
 
 #logOutLink{
-  position: relative;
-  top: 1em;
+    position: relative;
+    top: 1em;
 }
 
 
@@ -1179,6 +1181,7 @@ END Cart page
 /*-------Footer------*/
 
 footer{
+   
     position: relative;
     bottom: 0px;
     height: 100px;
@@ -1186,11 +1189,12 @@ footer{
     vertical-align: middle;
     text-align: center;
     background-color: #333;
-        min-height: fit-content;
+    min-height: fit-content;
 }
 
 
 footer a{
+     color: white;
     padding-right: 3em;
     padding-left: 3em;
 }
@@ -1207,7 +1211,8 @@ TABLET
     }
 
     .breads{
-        padding: 15px 20px 15px
+        height: 45px;
+        padding: 10px 20px 10px
     }
     .pageContainer{
         /*background: blue;*/
@@ -1244,7 +1249,7 @@ TABLET
     }
 
 
-     /*---- event list------*/
+    /*---- event list------*/
 
 
     .event{
@@ -1265,7 +1270,7 @@ TABLET
 
     #bookImage{
         border: 1.5px solid #000;
-    padding: 3px;
+        padding: 3px;
 
     }
 
@@ -1312,7 +1317,7 @@ SMARTPHONE
 
     }
 
-     .bookFilters{
+    .bookFilters{
         position: relative;
 
         min-height: fit-content;
@@ -1322,12 +1327,17 @@ SMARTPHONE
     }
 
 
+
     .breads{
-        padding: 15px 20px 15px
+        height: 45px;
+        padding: 10px 20px 10px
+
     }
 
     h2.theme{
-        text-align: center;
+       margin: 20px 0;
+    text-align: center;
+    font: bold 20px Monserrat, Sans-Serif;
     }
 
     .navbar{
@@ -1339,7 +1349,7 @@ SMARTPHONE
 
 
 
-     /*---- book page------*/
+    /*---- book page------*/
 
     #titoloLibro{
         font-size: 20px;
@@ -1366,8 +1376,8 @@ SMARTPHONE
     }
 
     img.book {
-     height: auto;
-    width: 200px;
+        height: auto;
+        width: 200px;
 
     }
 
@@ -1379,29 +1389,40 @@ SMARTPHONE
 
 
     /* event list*/
-    
-    .overlayInfo{
-   font-size: 1em;
-}
+
+    .overlayInfo {
+        padding-top: 6px;
+        padding-bottom: 9px;
+        font-size: 0.8em;
+    }
+
+    .overlayInfo a,h6 {
+        margin-bottom: 2px;
+        font-size: 1.1em;
+    }
+    .overlayInfo h5 {
+        margin-bottom: 2px;
+        font-size: 1.4em;
+    }
 
     .event{
-
-        margin: 3% auto;
+        min-height: 260px;
+        margin: 5% auto;
     }
 
     .event img{
-    width: 100%;
-    height: 150px;
+        width: 100%;
+        height: 250px;
 
-    object-fit: cover;
-    object-position: 100% 0;
+        object-fit: cover;
+        object-position: 100% 0;
 
-}
-
-
+    }
 
 
-/* single event*/
+
+
+    /* single event*/
 
     .evtop{
         background-color: transparent;
@@ -1444,8 +1465,8 @@ SMARTPHONE
 
     /*-----contact us -----*/
     .form-field .long {
-    max-width: 100%;
-}
+        max-width: 100%;
+    }
 
     .ContactUsText h5{
         font-size: 1.1em;
@@ -1458,13 +1479,13 @@ SMARTPHONE
     }
 
     .bookFilters h6{
-    margin-bottom: 10px;
-}
+        margin-bottom: 10px;
+    }
 
     .dropdown-menu.dfilters.show{
 
-    transform: translate3d(0px, 5px, 0px)!important;
-}
+        transform: translate3d(0px, 5px, 0px)!important;
+    }
 
 
 }
